Rewrite
- don't use DefaultExports collectors, as they
  change in time
  use a set of collectors that return the same
  all the time
- add more variety of data: escaped label values and help
  text, many label values
- warm up each implementation to allow JVM to
  generate machine code
  previously only 'PerformantTextFormat' was warmed up
- force GC between runs to allow measuring memory performance
- use a standard Gradle distribution